--- a/app/assets/less/popup.less
+++ b/app/assets/less/popup.less
@@ -4,6 +4,8 @@
 .bs-app {
   display: none;
 }
+
+
 .bs-loader {
   width: 200px;
   height: 200px;
@@ -44,62 +46,51 @@
   content: '';
   opacity: .5;
 }
+
 @keyframes rotate {
   0% {
-    transform: rotateZ(-360deg);
-    -webkit-transform: rotateZ(-360deg);
-    -moz-transform: rotateZ(-360deg);
-    -o-transform: rotateZ(-360deg);
+    .transform(rotateZ(-360deg));
   }
   100% {
-    transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-    -moz-transform: rotateZ(0deg);
-    -o-transform: rotateZ(0deg);
+    .transform(rotateZ(0deg));
   }
 }
+
 @-webkit-keyframes rotate {
   0% {
-    transform: rotateZ(-360deg);
-    -webkit-transform: rotateZ(-360deg);
-    -moz-transform: rotateZ(-360deg);
-    -o-transform: rotateZ(-360deg);
+    .transform(rotateZ(-360deg));
   }
   100% {
-    transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-    -moz-transform: rotateZ(0deg);
-    -o-transform: rotateZ(0deg);
+    .transform(rotateZ(0deg));
   }
 }
+
 @-moz-keyframes rotate {
   0% {
-    transform: rotateZ(-360deg);
-    -webkit-transform: rotateZ(-360deg);
-    -moz-transform: rotateZ(-360deg);
-    -o-transform: rotateZ(-360deg);
+    .transform(rotateZ(-360deg));
   }
   100% {
-    transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-    -moz-transform: rotateZ(0deg);
-    -o-transform: rotateZ(0deg);
+    .transform(rotateZ(0deg));
   }
 }
+
 @-o-keyframes rotate {
   0% {
-    transform: rotateZ(-360deg);
-    -webkit-transform: rotateZ(-360deg);
-    -moz-transform: rotateZ(-360deg);
-    -o-transform: rotateZ(-360deg);
+    .transform(rotateZ(-360deg));
   }
   100% {
-    transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-    -moz-transform: rotateZ(0deg);
-    -o-transform: rotateZ(0deg);
+    .transform(rotateZ(0deg));
   }
 }
+
+.transform (@transform) {
+  transform: @transform;
+  -webkit-transform: @transform;
+  -moz-transform: @transform;
+  -o-transform: @transform;
+}
+
+
 .select2-container {
   display: block !important;
 }
