--- a/app/assets/less/popup.less
+++ b/app/assets/less/popup.less
@@ -9,7 +9,7 @@
   display: none;
 }
 .popup-content {
-  padding: 15px;
+  padding: 10px;
 }
 
 .bs-loader {
@@ -106,6 +106,7 @@
     border-color: #ddd;
     line-height: 36px;
     height: 36px;
+    color: #666;
     .select2-arrow {
       border-radius: 0;
       background: @body-bg;
@@ -114,5 +115,10 @@
   }
 }
 .select2-results {
-  min-height: 120px;
+  max-height: 120px;
 }
+//.bootstrap-switch {
+//  .bootstrap-switch-label {
+//    background: @brand-primary;
+//  }
+//}
