--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -901,12 +901,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #e66d35;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: #b84a17;
   text-decoration: underline;
 }
 a:focus {
@@ -1139,10 +1139,10 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #337ab7;
+  color: #e66d35;
 }
 a.text-primary:hover {
-  color: #286090;
+  color: #ce531a;
 }
 .text-success {
   color: #3c763d;
@@ -1170,10 +1170,10 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #e66d35;
 }
 a.bg-primary:hover {
-  background-color: #286090;
+  background-color: #ce531a;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -2832,8 +2832,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #e66d35;
+  border-color: #e35d1e;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2842,8 +2842,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #ce531a;
+  border-color: #af4616;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2868,11 +2868,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #e66d35;
+  border-color: #e35d1e;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #e66d35;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3056,7 +3056,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #337ab7;
+  color: #e66d35;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3077,7 +3077,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #23527c;
+  color: #b84a17;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3223,7 +3223,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #337ab7;
+  background-color: #e66d35;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3649,7 +3649,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #337ab7;
+  border-color: #e66d35;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3742,7 +3742,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #337ab7;
+  background-color: #e66d35;
 }
 .nav-stacked > li {
   float: none;
@@ -4368,7 +4368,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #337ab7;
+  color: #e66d35;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4388,7 +4388,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #23527c;
+  color: #b84a17;
   background-color: #eeeeee;
   border-color: #dddddd;
 }
@@ -4400,8 +4400,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #e66d35;
+  border-color: #e66d35;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4516,11 +4516,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: #e66d35;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: #ce531a;
 }
 .label-success {
   background-color: #5cb85c;
@@ -4583,7 +4583,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #e66d35;
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -4654,7 +4654,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #e66d35;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4768,7 +4768,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #e66d35;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4909,8 +4909,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #e66d35;
+  border-color: #e66d35;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -4926,7 +4926,7 @@ a.list-group-item:focus {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #c7ddef;
+  color: #fcf0eb;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5270,22 +5270,22 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #e66d35;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #e66d35;
+  border-color: #e66d35;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #e66d35;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #e66d35;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #e66d35;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6287,12 +6287,14 @@ button.close {
 }
 .popup-content {
   min-width: 400px;
+  background-image: url('../../images/bs-logo.png');
+  background-position: center center;
 }
 .bs-app {
   display: none;
 }
 .popup-content {
-  padding: 10px;
+  padding: 25px 10px 10px 10px;
 }
 .bs-loader {
   width: 200px;
@@ -6407,6 +6409,38 @@ button.close {
   background: #ffffff;
   border: none;
 }
+.select2-drop {
+  color: #666;
+  border-radius: 0;
+  box-shadow: none;
+}
+.select2-drop-active {
+  border-color: #ddd;
+}
+.select2-search input {
+  background-color: #ffffff;
+  border-color: #ddd;
+}
 .select2-results {
-  max-height: 120px;
+  max-height: 80px;
+}
+.select2-results .select2-highlighted {
+  background: #e66d35;
+}
+.device-type-btn-group {
+  width: 100%;
+}
+.device-type-btn-group .btn {
+  width: 50%;
+}
+.device-type-btn-group .btn-primary {
+  background: #ffffff;
+  color: #333333;
+  border-color: #ddd;
+  transition: all 0.2s linear;
+}
+.device-type-btn-group .btn-primary.active {
+  background: #e66d35;
+  color: #ffffff;
+  box-shadow: none;
 }
