--- a/app/assets/less/popup.less
+++ b/app/assets/less/popup.less
@@ -1,7 +1,3 @@
-//@import "../../bower_components/bootstrap/less/variables";
-//@import "../../bower_components/bootstrap/less/mixins";
-//@import "variables";
-
 .popup-content {
   min-width: 400px;
   background-image: url('../../images/bs-logo.png');
@@ -154,8 +150,17 @@
     }
   }
 }
-//.bootstrap-switch {
-//  .bootstrap-switch-label {
-//    background: @brand-primary;
-//  }
-//}
+
+
+.errors-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  li {
+    display: none;
+    padding: 5px 15px;
+    background: @brand-danger;
+    color: @body-bg;
+    font-weight: 300;
+  }
+}
